--- a/train_sharespeare_char.conf
+++ b/train_sharespeare_char.conf
@@ -14,7 +14,7 @@ config {
         wandb_run_name = "nano-gpt"
 
         # data
-        # dataset = "shakespeare_char"
+        dataset = "openwebtext"
         gradient_accumulation_steps = 1
         batch_size = 64
         block_size = 256
