--- a/train_sharespeare_char.conf
+++ b/train_sharespeare_char.conf
@@ -11,7 +11,7 @@ config {
         always_save_checkpoint = False
 
         wandb_project = "shakespeare-char"
-        wandb_run_name = "nano-gpt"
+        wandb_run_name = "nano"
 
         # data
         dataset = "openwebtext"
