--- a/train_gpt2.conf
+++ b/train_gpt2.conf
@@ -7,7 +7,7 @@ include "default_gpt2.conf"
 config {
     wandb_log = True
     wandb_project = 'owt'
-    wandb_run_name='gpt2-124M'
+    wandb_run_name='gpt2'
 
     # these make the total batch size be ~0.5M
     # 12 batch size * 1024 block size * 5 gradaccum * 8 GPUs = 491,520
